fix: adjust spacing text and action button to divider

--- a/components/toast/index.css
+++ b/components/toast/index.css
@@ -37,7 +37,7 @@ governing permissions and limitations under the License.
   --spectrum-toast-spacing-icon-to-text: var(--spectrum-text-to-visual-100);
 
   --spectrum-toast-spacing-start-edge-to-text-and-icon: var(--spectrum-spacing-300);
-  /* --spectrum-toast-spacing-text-and-button-to-divider: var(--spectrum-spacing-300); */
+  --spectrum-toast-spacing-text-and-action-button-to-divider: var(--spectrum-spacing-300);
 
   --spectrum-toast-spacing-top-edge-to-text: var(--spectrum-toast-top-to-text);
   --spectrum-toast-spacing-text-to-bottom: var(--spectrum-toast-bottom-to-text);
@@ -179,7 +179,7 @@ governing permissions and limitations under the License.
     /* TODO invalid value */
     float: inline-end;
     margin-block-start: var(--spectrum-toast-spacing-top-edge-to-action-button);
-    margin-inline-end: var(--spectrum-toast-spacing-toast-to-edge);
+    margin-inline-end: var(--spectrum-toast-spacing-text-and-action-button-to-divider);
   }
 
   & + .spectrum-Toast-buttons {
